# pharmacy-chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TEST_README.md  main.py  pyproject.toml  run_integration_tests.py  test_agents_simple.py  test_collection_agent_integration.py  test_info_agent_integration.py  test_websocket_comprehensive.py
config/: README.md  base.py  development.py  production.py  settings.py  staging.py
src/: dependencies.py
src/agents/: __init__.py  agent_factory.py  base.py  collection_agent.py  info_agent.py  memory.py
src/agents/tools/: __init__.py  pharmacy_tools.py
src/clients/: pharmacy_api.py
src/endpoints/: health.py  pharmacy.py  websocket.py  websocket_handlers.py
src/endpoints/swagger/: __init__.py  pharmacy_docs.py
src/models/: pharmacy.py
src/routes/: api.py
src/services/: pharmacy_service.py
src/utils/: phone.py
src/websocket/: __init__.py  connection_manager.py
