[project]
name = "ai-agent-call-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "pydantic[email]>=2.11.9",
    "pydantic-settings>=2.6.1",
    "uvicorn>=0.36.0",
    "uvloop>=0.21.0",
    "websockets>=14.1",
    "pre-commit>=4.3.0",
    "python-dotenv>=1.1.1",
]
